# dvo-extractor

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  build_deploy.sh  config-devel.yaml  config.yaml  constraints.txt  deployment-requirements.txt  docker-compose.yml  grafana.json  jenkinsSmokeTest.groovy  pr_check.sh  pyproject.toml  requirements.txt  requirements_int.txt  setup.cfg  setup.py  test-requirements.txt  testing-requirements.txt  tox.ini
ccx_data_pipeline/: command_line.py  consumer.py  data_pipeline_error.py  http_downloader.py  kafka_publisher.py  logging.py  schemas.py
ccx_data_pipeline/utils/: __init__.py  clowder.py  sentry.py
ccx_data_pipeline/watchers/: __init__.py  cluster_id_watcher.py  consumer_watcher.py  payload_tracker_watcher.py  stats_watcher.py
controller/: __init__.py  command_line.py  consumer.py  consumer_watcher.py  data_pipeline_error.py  http_downloader.py  kafka_publisher.py  log_filter.py  logging.py  minio_downloader.py  publisher.py  schemas.py
controller/watchers/: __init__.py  cluster_id_watcher.py  consumer_watcher.py  payload_tracker_watcher.py  stats_watcher.py
dashboards/: grafana-dashboard-insights-ccx-data-pipeline.configmap.yaml  grafana-dashboard-insights-ccx-processing-slo.configmap.yaml  slo.json
demos/io-pulling-prometheus/: WebConsole integration with the External data pipeline.ipynb  WebConsole integration with the External data pipeline.slides.html
demos/notification-service/: notification-service1.drawio  notification-service2.drawio  notification-service2A.drawio  notification-service2B.drawio  notification-service3.drawio  notification-service4.drawio
demos/push-pull-model-benchmarks/: consumer_benchmarks.ipynb
deploy/: benchmark.yaml  clowdapp.yaml
doc/: sequence-diagram.uml
docs/: _config.yml  _toc.yml  architecture.md  clowder.md  configuration.md  deploy.md  environment_vars.md  implementation.md  index.md  local_setup.md  logging.md  logstash.md  modules.md  prometheus.md  references.md
research/cluster_id_distribution/: cluster_id_distribution.py
research/old_results/: cluster_results_age.md
research/statistic/: External data pipeline.ipynb  External data pipeline.slides.html
test/: __init__.py  benchmark.py  benchmark_test.py  command_line_test.py  consumer_test.py  consumer_watcher_test.py  http_downloader_test.py  kafka_publisher_test.py  log_filter_test.py  logging_test.py  publisher_test.py  sentry_utils_test.py  utils.py
test/watchers_test/: __init__.py  cluster_id_watcher_test.py  consumer_watcher_test.py  payload_tracker_watcher_test.py  stats_watcher_test.py
